--- a/nzbget.vcproj
+++ b/nzbget.vcproj
@@ -332,6 +332,14 @@
 			>
 		</File>
 		<File
+			RelativePath=".\PostInfo.cpp"
+			>
+		</File>
+		<File
+			RelativePath=".\PostInfo.h"
+			>
+		</File>
+		<File
 			RelativePath=".\PrePostProcessor.cpp"
 			>
 		</File>
