updated version-string (preparing to release 0.4.1)
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@187 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/configure.ac
+++ b/configure.ac
@@ -2,8 +2,8 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.59)
-AC_INIT(nzbget, 0.4.1-testing, hugbug@users.sourceforge.net)
-AM_INIT_AUTOMAKE(nzbget, 0.4.1-testing)
+AC_INIT(nzbget, 0.4.1, hugbug@users.sourceforge.net)
+AM_INIT_AUTOMAKE(nzbget, 0.4.1)
 AC_CONFIG_SRCDIR([nzbget.cpp])
 AC_CONFIG_HEADERS([config.h])
 
