--- a/configure.ac
+++ b/configure.ac
@@ -2,8 +2,8 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.59)
-AC_INIT(nzbget, 0.4.1, hugbug@users.sourceforge.net)
-AM_INIT_AUTOMAKE(nzbget, 0.4.1)
+AC_INIT(nzbget, 0.5.0-testing, hugbug@users.sourceforge.net)
+AM_INIT_AUTOMAKE(nzbget, 0.5.0-testing)
 AC_CONFIG_SRCDIR([nzbget.cpp])
 AC_CONFIG_HEADERS([config.h])
 
