added the printing of stack on segmentation faults (if configured with <--enable-debug>, POSIX only)
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@192 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/config.h.in
+++ b/config.h.in
@@ -13,6 +13,9 @@
    compiled */
 #undef FUNCTION_MACRO_NAME
 
+/* Define to 1 to create stacktrace on segmentation faults */
+#undef HAVE_BACKTRACE
+
 /* Define to 1 if ctime_r takes 2 arguments */
 #undef HAVE_CTIME_R_2
 
