added option <DumpCore> for better debugging on Linux in a case of abnormal program termination
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@199 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf.example
+++ b/nzbget.conf.example
@@ -307,6 +307,12 @@ LogBufferSize=1000
 # the names of broken files
 CreateBrokenLog=yes
 
+# Create memory dump (core-file) on abnormal termination (POSIX only) (yes, no)
+# Core-files are very helpful for debugging.
+# NOTE: core-files may contain sensible data, like your login/password to
+# newsserver etc.
+DumpCore=no
+
 # See also option "logfile" in secion "PATHS"
 
 
