--- a/Makefile.am
+++ b/Makefile.am
@@ -8,9 +8,9 @@ nzbget_SOURCES = ArticleDownloader.cpp ArticleDownloader.h BinRpc.cpp BinRpc.h \
 	Observer.h Options.cpp Options.h ParChecker.cpp ParChecker.h PostInfo.cpp \
 	PostInfo.h PrePostProcessor.cpp PrePostProcessor.h QueueCoordinator.cpp \
 	QueueCoordinator.h QueueEditor.cpp QueueEditor.h RemoteClient.cpp RemoteClient.h \
-	RemoteServer.cpp RemoteServer.h ScriptController.cpp ScriptController.h ServerPool.cpp \
-	ServerPool.h TLS.cpp TLS.h Thread.cpp Thread.h Util.cpp Util.h XmlRpc.cpp XmlRpc.h \
-	nzbget.cpp nzbget.h
+	RemoteServer.cpp RemoteServer.h Scheduler.cpp Scheduler.h ScriptController.cpp \
+	ScriptController.h ServerPool.cpp ServerPool.h TLS.cpp TLS.h Thread.cpp Thread.h Util.cpp \
+	Util.h XmlRpc.cpp XmlRpc.h nzbget.cpp nzbget.h
 
 EXTRA_DIST = nzbget.conf.example postprocess-example.sh \
 	win32.h NTService.cpp NTService.h \
