--- a/nzbget.conf.example
+++ b/nzbget.conf.example
@@ -555,32 +555,38 @@ PostPauseQueue=no
 ### SCHEDULER                                                              ###
 
 # This section defines scheduler commands.
-# For each command create a pair of options "TaskX.At" and "TaskX.Command".
+# For each command create a set of options <TaskX.Time>, <TaskX.Command>,
+# <TaskX.WeekDays> and <TaskX.DownloadRate>.
 # The following example shows how to throttle downloads in the daytime 
 # by 100 KB/s and download at full speed overnights:
 
-# Time to execute the command (HH:MM)
+# Time to execute the command (HH:MM).
 #Task1.Time=08:00
 
-# Week days to execute the command (1, 2, 3, 4, 5, 6, 7)
+# Week days to execute the command (1-7).
 # Comma separated list of week days numbers. 
 # 1 is Monday.
 # Character '-' may be used to define ranges.
 # Examples: "1-7", "1-5", "5,6", "1-5, 7".
-# NOTE: if the command must be executed every day (1-7), the option "WeekDays"
-# can be omitted.
 #Task1.WeekDays=1-7
 
-# Command to be executed (Pause, Unpause, 0..9999999)
+# Command to be executed (Pause, Unpause, DownloadRate).
 # Possible commands:
-#   Pause      - pauses download
-#   Unpause    - resumes download
-#   0..9999999 - sets download rate in KB/s, 0 - no limit
-#Task1.Command=100
+#   Pause      - pauses download;
+#   Unpause    - resumes download;
+#   DownloadRate - sets download rate in KB/s.
+#Task1.Command=DownloadRate
+
+# Download rate to be set if the command is "DownloadRate" (kilobytes/sec).
+# If the option <TaskX.Command> is set to "Pause" or "Unpause" this option
+# is ignored and can be omitted.
+# Value "0" means no speed control.
+#Task1.DownloadRate=100
 
 #Task2.Time=20:00
 #Task2.WeekDays=1-7
-#Task2.Command=0
+#Task2.Command=DownloadRate
+#Task1.DownloadRate=0
 
 
 ##############################################################################
